--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ a.article:hover {
   background: #000;
   padding: 15px;
   color: #fff;
-  text-align: left;
+  text-align: center;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
