--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ a.article:hover {
 
 .modal-content {
   margin: 10% auto;
-  width: 50%;      
+  width: 60%;  
+  height: 40% !important;       
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
@@ -211,6 +212,7 @@ a.article:hover {
 .modal-body iframe{
     object-fit: contain;
     width: 50%;
+    min-height: 300px;
     border-radius: 5px;
 }
 
